--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/biscuits.html">Biscuits</a>
+        <a href="recipes/pizza-dough.html">Pizza Dough</a>
     </body>
 </html>
