Change name of pizza.html & finish recipes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/biscuits.html">Biscuits</a>
-        <a href="recipes/pizza-dough.html">Pizza Dough</a>
+        <ul>
+            <li><a href="recipes/biscuits.html">Biscuits</a></li>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/halushki.html">Halushki</a></li>
+        </ul>
     </body>
 </html>
