--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -131,6 +131,6 @@
             <li>Bake pizza in the 475°F oven, one at a time, until the crust is browned and the cheese is golden, about 10 to 15 minutes. If you want, toward the end of the cooking time you can sprinkle on a little more cheese.</li>
         </ol>
 
-        <img src="https://www.simplyrecipes.com/thmb/HLuuZXJlZ4ByY3iUX7QGp_G91bM=/580x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Homemade-Pizza-METHOD-10-01f70ecc84ea4a63bb5a723e5a027a09.jpg" alt="Pizza going into oven"
+        <img src="https://www.simplyrecipes.com/thmb/HLuuZXJlZ4ByY3iUX7QGp_G91bM=/580x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Homemade-Pizza-METHOD-10-01f70ecc84ea4a63bb5a723e5a027a09.jpg" alt="Pizza going into oven">
     </body>
 </html>
