Add images directory
Added the images directory and turned the images I already had into
relative links

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Homemade Pizza</h1>
 
-        <img src="https://www.simplyrecipes.com/thmb/bDKO6h034lOcPdfkRXwbG0FceiY=/720x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Homemade-Pizza-Dough-Lead-Shot-2d-ee202758ce084fc4a88917816df9fc07.jpg" alt="Cheesy mushroom pizza">
+        <img src="../images/cheesy-pizza.webp" alt="Cheesy mushroom pizza">
 
         <h2>Description</h2>
         <p>A pizza recipe that I will probably end up making.</p>
@@ -131,6 +131,6 @@
             <li>Bake pizza in the 475°F oven, one at a time, until the crust is browned and the cheese is golden, about 10 to 15 minutes. If you want, toward the end of the cooking time you can sprinkle on a little more cheese.</li>
         </ol>
 
-        <img src="https://www.simplyrecipes.com/thmb/HLuuZXJlZ4ByY3iUX7QGp_G91bM=/580x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Homemade-Pizza-METHOD-10-01f70ecc84ea4a63bb5a723e5a027a09.jpg" alt="Pizza going into oven">
+        <img src="../images/finalpizza.webp" alt="Pizza going into oven">
     </body>
 </html>
