--- a/recipes/halushki.html
+++ b/recipes/halushki.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Halushki</h1>
 
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1119260.jpg" alt="A beautiful noodle dish">
+        <img src="../images/halushki.jpeg" alt="A beautiful noodle dish">
         
         <h2>Ingredients</h2>
         <ul>
