--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,11 +3,12 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css">
         <title>Pizza</title>
     </head>
 
     <body>
-        <h1>Homemade Pizza</h1>
+        <h1 class="title">Homemade Pizza</h1>
 
         <img src="../images/cheesy-pizza.webp" alt="Cheesy mushroom pizza">
 
@@ -16,7 +17,7 @@
 
         <h2>Ingredients</h2>
         <h3>For the pizza dough</h3>
-        <ul>
+        <ul class="list">
             <li>1 1/2 cups (355 ml) - warm water (105°F-115°F)</li>
             <li>1 package (2 1/4 teaspoons) - active dry yeast</li>
             <li>3 3/4 cups (490g) - bread flour</li>
@@ -26,7 +27,7 @@
         </ul>
 
         <h3>For making the pizza and toppings</h3>
-        <ul>
+        <ul class="list">
             <li>Extra virgin olive oil</li>
             <li>Cornmeal (to help slide the pizza onto the pizza stone)</li>
             <li>Tomato sauce (smooth or pureed)</li>
@@ -50,7 +51,7 @@
 
         <h2>Steps</h2>
         <h3>Making the Pizza Dough</h3>
-        <ol>
+        <ol class="list">
             <li>
                 <p>Place the warm water in the large bowl of a heavy duty stand mixer. Sprinkle the yeast over the warm water and let it sit for 5 minutes until the yeast is dissolved.</p>
                 
@@ -83,7 +84,7 @@
         </ol>
 
         <h3>Preparing the Pizzas</h3>
-        <ol>
+        <ol class="list">
             <li>Place a pizza stone on a rack in the lower third of your oven. Preheat the oven to 475°F for at least 30 minutes, preferably an hour. If you don't have a pizza stone, you can use a pizza pan or a thick baking sheet; you need something that will not warp at high temperatures.</li>
             <li>
                 <p>Remove the plastic cover from the dough. Dust your hands with flour and push the dough down so it deflates a bit. Divide the dough in half.</p>
