--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <div>
+        <h1 class="title">Odin Recipes</h1></div>
         <ul>
             <li><a href="recipes/biscuits.html">Biscuits</a></li>
             <li><a href="recipes/pizza.html">Pizza</a></li>
